maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: value n is not a member of Int
        n n+1
          ^